the herd rides again

--- a/index.html
+++ b/index.html
@@ -1,1 +1,98 @@
-github page
+<!-- w3c dtd lol -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+   "http://www.w3.org/TR/html4/loose.dtd">
+<html lang="en">
+
+<head>
+<meta name="microid" content="4f6c8432d0ee4938fd005aa07cc7a4447da23c0c" />
+<title>bahaha hahi</title>
+	<link rel="openid.server"   href="http://shortbus.org/id/server">
+	<link rel="openid.delegate" href="http://shortbus.org/id/user/peter">
+</head>
+
+<body>
+<style type="text/css" media="screen">
+@import "site.css";
+
+div.nav {
+	float: left;
+	z-index: 3;
+	margin: auto;
+	}
+
+div.nav img {
+	margin-left: 1px none none none;
+	border: none;
+	}
+
+image.left {
+	display: block;
+	margin-left: auto;
+	}
+
+image.right {
+	display: block;
+	margin-right: auto;
+	}
+
+#nonsense {
+	border: dashed;
+	float: right;
+	}
+
+#content {
+  float: left;
+  clear: left;
+}
+</style>
+
+<div id="main">
+
+<div class="nav">
+	<img alt="shortbus.org" src="i/nav/shortbus.org.png" width=98px height=11px><br \>
+	<a href="/me/"><img alt="me" src="i/nav/me.png" width=10px height=6px></a>
+	<a href="http://flickr.com/photos/clango/"><img alt="pics" src="i/nav/pics.png" width=18px height=6px></a>
+	<a href="https://shortbus.org/id/"><img alt="openid" src="i/nav/openid.png" width=28px height=6px></a>
+	<a href="http://stamped.es/"><img alt="bloggin" src="i/nav/bloggin.png" width=35px height=6px></a>
+</div>
+
+</div>
+
+<div id="nonsense">
+    <table>
+        <tr>
+            <td>
+                <img src="i/herd/green.gif" alt="hai" width="107" height="132" border="0">
+            </td>
+            <td>
+                <img src="i/herd/orange.gif" alt="hai" width="107" height="132" border="0">
+            </td>
+            <td>
+                <img src="i/herd/blue.gif" alt="hai" width="107" height="132" border="0">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="i/herd/black.gif" alt="hai" width="107" height="132" border="0">
+            </td>
+            <td>
+                <img src="i/herd/purple.gif" alt="hai" width="107" height="132" border="0">
+            </td>
+            <td>
+                <img src="i/herd/yellow.gif" alt="hai" width="107" height="132" border="0">
+            </td>
+        </tr>
+    </table>
+</div>
+
+
+<!-- google analytics -->
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-1486532-1";
+urchinTracker();
+</script>
+
+</body>
+</html>
